@@ -1,7 +1,8 @@
 1.4rc1 - [RELEASEDATE]
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-- Fixed issue 13112: Corrected the tutorial text.
+- Fixed issue #13112: Corrected the tutorial text.
+- Fixed issue #13119: Replaced references to /tmp with createTempDir() calls.
 
 1.4beta1 - Tuesday 27 May 2008
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
